--- a/2.Estadistica/5.Probabilidad.ipynb
+++ b/2.Estadistica/5.Probabilidad.ipynb
@@ -79,6 +79,228 @@
    "source": [
     "La elección de la distribución correcta es una habilidad crítica. Por ejemplo, la resolución de un sensor de precisión podría modelarse con una distribución rectangular (donde todos los valores dentro de un rango son igualmente probables). El tiempo de respuesta de un servidor web podría seguir una distribución exponencial. La distribución log-normal, que es asimétrica hacia la derecha, es útil para modelar variables que no pueden ser negativas y tienen una larga cola a la derecha, como los salarios o el tamaño de las células. El GUM (Guía para la Expresión de la Incertidumbre en el Metrología) recomienda estas distribuciones según el tipo de conocimiento disponible sobre los límites y la probabilidad de los valores. Dominar estas distribuciones permite al científico de datos construir modelos más realistas y robustos, capaces de capturar la esencia de los datos que están analizando."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3b7360b",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## 🎲 1. Introducción a la Teoría de la Probabilidad\n",
+    "\n",
+    "La **probabilidad** es una rama de las matemáticas que se encarga de cuantificar la **incertidumbre**. Nos permite asignar un valor numérico entre 0 (imposible) y 1 (certeza) a la posibilidad de que ocurra un evento.\n",
+    "\n",
+    "### 🔑 Conceptos Clave\n",
+    "\n",
+    "  * **Experimento Aleatorio:** Cualquier proceso cuyo resultado no se puede predecir con certeza (ejemplo: lanzar un dado).\n",
+    "  * **Espacio Muestral ($\\Omega$):** El conjunto de todos los posibles resultados de un experimento aleatorio (ejemplo: al lanzar un dado, $\\Omega = \\{1, 2, 3, 4, 5, 6\\}$).\n",
+    "  * **Evento (E):** Un subconjunto del espacio muestral, es decir, un resultado o un conjunto de resultados que nos interesa (ejemplo: obtener un número par, $E = \\{2, 4, 6\\}$).\n",
+    "\n",
+    "### 🔢 Cálculo Básico de la Probabilidad\n",
+    "\n",
+    "La probabilidad simple de que ocurra un evento $E$ se calcula usando la **Regla de Laplace**:\n",
+    "\n",
+    "$$P(E) = \\frac{\\text{Número de resultados favorables}}{\\text{Número total de resultados posibles}}$$\n",
+    "\n",
+    "### 💻 Ejemplo en Python: Probabilidad Simple\n",
+    "\n",
+    "Podemos simular un experimento simple como lanzar un dado.\n",
+    "\n",
+    "```python\n",
+    "# Importamos la librería 'random' para simular el lanzamiento\n",
+    "import random\n",
+    "\n",
+    "# Definimos el espacio muestral (resultados posibles)\n",
+    "espacio_muestral = [1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "# Definimos el evento E: obtener un número par\n",
+    "evento_e = [2, 4, 6]\n",
+    "\n",
+    "# Cálculo de la probabilidad teórica\n",
+    "probabilidad_teorica = len(evento_e) / len(espacio_muestral)\n",
+    "\n",
+    "print(f\"Espacio Muestral (Ω): {espacio_muestral}\")\n",
+    "print(f\"Evento E (número par): {evento_e}\")\n",
+    "print(f\"P(E) = {len(evento_e)} / {len(espacio_muestral)} = {probabilidad_teorica:.2f}\")\n",
+    "```\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "Estos fundamentos son la base. El siguiente paso lógico, y crucial para el Teorema de Bayes, es entender la **Probabilidad Condicional**.\n",
+    "\n",
+    "Pero antes de seguir, a partir de la explicación anterior, ¿cómo definirías la probabilidad de obtener un número **menor o igual a 3** al lanzar ese mismo dado? 🤔\n",
+    "\n",
+    "La probabilidad de obtener un número menor o igual a 3 ($\\{1, 2, 3\\}$) era, en efecto, $3/6 = 0.5$. \n",
+    "\n",
+    "Excelente, has pasado directamente al concepto central: la **Probabilidad Condicional**. Es un paso crucial, ya que el Teorema de Bayes se basa completamente en ella.\n",
+    "\n",
+    "Antes de seguir, la probabilidad de obtener un número menor o igual a 3 ($\\{1, 2, 3\\}$) era, en efecto, $3/6 = 0.5$. ¡Bien hecho\\!\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "## 🔗 2. Probabilidad Condicional\n",
+    "\n",
+    "La **probabilidad condicional** es la probabilidad de que ocurra un **Evento A**, sabiendo que otro **Evento B** ya ha ocurrido. En esencia, estamos **reduciendo nuestro espacio muestral** a la información que ya conocemos.\n",
+    "\n",
+    "### ✍️ Notación y Fórmula\n",
+    "\n",
+    "La probabilidad condicional se denota como $P(A|B)$, que se lee: \"Probabilidad de A, dado B\" o \"Probabilidad de A, condicional a B\".\n",
+    "\n",
+    "Se calcula con la siguiente fórmula:\n",
+    "\n",
+    "$$P(A|B) = \\frac{P(A \\cap B)}{P(B)}$$\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "  * $P(A \\cap B)$ es la probabilidad de que **A y B** ocurran conjuntamente (la intersección).\n",
+    "  * $P(B)$ es la probabilidad del evento que ya se conoce (la condición).\n",
+    "\n",
+    "[Images of Venn diagram conditional probability]\n",
+    "\n",
+    "### 💡 El Impacto del \"Dado Que\"\n",
+    "\n",
+    "El factor clave es el término \"**dado que**\". Nos dice que ya no consideramos todos los posibles resultados ($\\Omega$), sino solo aquellos resultados que cumplen con la condición $B$.\n",
+    "\n",
+    "### 💻 Ejemplo en Python: Reducción del Espacio Muestral\n",
+    "\n",
+    "Volvamos a nuestro dado de 6 caras. Queremos calcular:\n",
+    "\n",
+    "  * **Evento A:** Obtener un número impar ($\\{1, 3, 5\\}$).\n",
+    "  * **Evento B:** Obtener un número mayor que 3 ($\\{4, 5, 6\\}$).\n",
+    "\n",
+    "**Pregunta:** ¿Cuál es la probabilidad de obtener un número impar, *dado que* el número fue mayor que 3? $P(A|B)$.\n",
+    "\n",
+    "```python\n",
+    "# Definimos las probabilidades de los eventos\n",
+    "P_A = 3/6  # P(impar)\n",
+    "P_B = 3/6  # P(mayor que 3)\n",
+    "\n",
+    "# Calculamos la probabilidad de la intersección (A y B)\n",
+    "# Los resultados que son impares Y mayores que 3: solo el 5\n",
+    "interseccion_A_B = 1/6\n",
+    "\n",
+    "# Aplicamos la fórmula de probabilidad condicional: P(A|B) = P(A ∩ B) / P(B)\n",
+    "P_A_dado_B = interseccion_A_B / P_B\n",
+    "\n",
+    "print(f\"P(A ∩ B) = {interseccion_A_B:.2f}\")\n",
+    "print(f\"P(B) = {P_B:.2f}\")\n",
+    "print(f\"P(Impar | >3) = P(A|B) = {P_A_dado_B:.3f} (o 1/3)\")\n",
+    "```\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "Ahora que tenemos esta base, podemos formular una nueva pregunta usando el mismo dado:\n",
+    "\n",
+    "¿Cuál es la probabilidad de obtener un número **mayor que 4** (Evento A), **dado que** el resultado fue un **número par** (Evento B)?\n",
+    "\n",
+    "Identificar cuáles son los resultados de la intersección ($A \\cap B$) y la probabilidad de la condición ($P(B)$).\n",
+    "\n",
+    "  * **A** (mayor que 4) = $\\{5, 6\\}$\n",
+    "  * **B** (par) = $\\{2, 4, 6\\}$\n",
+    "  * La intersección ($A \\cap B$) es $\\{6\\}$ (un solo resultado).\n",
+    "  * $P(A|B) = P(A \\cap B) / P(B) = (1/6) / (3/6) = 1/3$. \n",
+    "\n",
+    "¡Buena pregunta\\! Es excelente revisar los fundamentos antes de avanzar, ya que el Teorema de Bayes utiliza estas operaciones constantemente.\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "\n",
+    "## 🎯 3. Eventos y Operaciones\n",
+    "\n",
+    "Un **evento** ($\\text{E}$) es, simplemente, un **subconjunto** del espacio muestral ($\\Omega$). Es la descripción de uno o más resultados que nos interesan de un experimento.\n",
+    "\n",
+    "Por ejemplo, si el experimento es la extracción de una carta de una baraja de 52 cartas:\n",
+    "\n",
+    "  * $\\Omega$ = Las 52 cartas.\n",
+    "  * Evento $A$ = Obtener un As.\n",
+    "  * Evento $B$ = Obtener una carta de Corazones.\n",
+    "\n",
+    "### 🧮 Operaciones Básicas entre Eventos (Basadas en Teoría de Conjuntos)\n",
+    "\n",
+    "Las operaciones nos permiten combinar o modificar los eventos para calcular probabilidades más complejas.\n",
+    "\n",
+    "| Operación | Símbolo | Significado | Descripción de Resultados |\n",
+    "| :--- | :--- | :--- | :--- |\n",
+    "| **Unión** | $\\text{A} \\cup \\text{B}$ | $\\text{A}$ o $\\text{B}$ | Ocurre si $\\text{A}$ ocurre, $\\text{B}$ ocurre, o ambos ocurren. |\n",
+    "| **Intersección** | $\\text{A} \\cap \\text{B}$ | $\\text{A}$ y $\\text{B}$ | Ocurre solo si $\\text{A}$ y $\\text{B}$ ocurren simultáneamente. |\n",
+    "| **Complemento** | $\\text{A}^\\text{c}$ o $\\text{A}'$ | No $\\text{A}$ | Ocurre si $\\text{A}$ no ocurre. |\n",
+    "| **Eventos Mutuamente Excluyentes** | $\\text{A} \\cap \\text{B} = \\emptyset$ | $\\text{A}$ y $\\text{B}$ son Disjuntos | No pueden ocurrir al mismo tiempo (su intersección es vacía). |\n",
+    "\n",
+    "[Images of Venn diagram showing set operations union intersection complement]\n",
+    "\n",
+    "### 💻 Ejemplo de Operaciones en Python (Concepto)\n",
+    "\n",
+    "Podemos ver las operaciones de manera práctica usando los conjuntos de Python.\n",
+    "\n",
+    "**Experimento:** Lanzar un dado ($\\Omega = \\{1, 2, 3, 4, 5, 6\\}$).\n",
+    "\n",
+    "```python\n",
+    "espacio_muestral = {1, 2, 3, 4, 5, 6}\n",
+    "A = {1, 2, 3}  # Evento A: Obtener 3 o menos\n",
+    "B = {2, 4, 6}  # Evento B: Obtener un número par\n",
+    "\n",
+    "# 1. Unión (A o B)\n",
+    "# Usamos el operador '|' o el método union()\n",
+    "union_A_B = A.union(B)\n",
+    "print(f\"Unión (A U B): {union_A_B}\") # Debe ser {1, 2, 3, 4, 6}\n",
+    "\n",
+    "# 2. Intersección (A y B)\n",
+    "# Usamos el operador '&' o el método intersection()\n",
+    "interseccion_A_B = A.intersection(B)\n",
+    "print(f\"Intersección (A ∩ B): {interseccion_A_B}\") # Debe ser {2}\n",
+    "```\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "Ahora es tu turno de practicar una operación fundamental. Usando los mismos conjuntos:\n",
+    "\n",
+    "**Evento A** = $\\{1, 2, 3\\}$\n",
+    "\n",
+    "¿Cuál es el **Complemento de A** ($A^c$)? ¿Qué resultados incluye y cuál es su probabilidad $P(A^c)$? 🤔\n",
+    "\n",
+    "Para el evento **A** (Obtener 3 o menos) = $\\{1, 2, 3\\}$, el **Complemento de A** ($A^c$) es $\\{4, 5, 6\\}$, que son los resultados de \"obtener más de 3\". Su probabilidad es $P(A^c) = 3/6 = 0.5$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d6264a8",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## 📊 4. Probabilidad Marginal\n",
+    "\n",
+    "La **probabilidad marginal** de un evento es la probabilidad de que ese evento ocurra, calculada **sin tener en cuenta ninguna otra variable** (o \"marginando\" la información sobre otras variables).\n",
+    "\n",
+    "Imagina que tienes una tabla de datos (una tabla de contingencia) que muestra la cantidad de hombres y mujeres que votaron 'Sí' o 'No'. La probabilidad marginal sería la probabilidad de \"votar Sí\" (sin importar si fue hombre o mujer) o la probabilidad de \"ser mujer\" (sin importar si votó Sí o No).\n",
+    "\n",
+    "### 🆚 Contraste con Otros Tipos\n",
+    "\n",
+    "* **Probabilidad Marginal ($P(A)$):** La probabilidad de un solo evento. *Ejemplo: ¿Cuál es la probabilidad de que llueva?*\n",
+    "* **Probabilidad Conjunta ($P(A \\cap B)$):** La probabilidad de que dos eventos ocurran juntos. *Ejemplo: ¿Cuál es la probabilidad de que llueva **y** sea fin de semana?*\n",
+    "* **Probabilidad Condicional ($P(A|B)$):** La probabilidad de A dado que B ya ocurrió. *Ejemplo: ¿Cuál es la probabilidad de que llueva, **dado que** hay nubes negras?*\n",
+    "\n",
+    "### ➕ La Ley de la Probabilidad Total (Cálculo Marginal)\n",
+    "\n",
+    "En el contexto del Teorema de Bayes, a menudo no conocemos la probabilidad marginal $P(A)$ directamente. En cambio, usamos la **Ley de la Probabilidad Total (LPT)**, que nos permite calcular $P(A)$ sumando las probabilidades conjuntas de $A$ con todos los posibles escenarios ($B_i$) que pueden causar $A$.\n",
+    "\n",
+    "$$P(A) = \\sum_{i} P(A \\mid B_i) P(B_i)$$\n",
+    "\n",
+    "Donde $B_i$ son eventos mutuamente excluyentes y exhaustivos (cubren todo el espacio muestral).\n",
+    "\n",
+    "En el mundo real, esta ley nos permite encontrar la probabilidad general de un resultado (por ejemplo, \"que una persona dé positivo en un test médico\") considerando todas las formas en que ese resultado puede ocurrir (dado que está enferma **O** dado que no está enferma).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Ahora que hemos cubierto la Probabilidad Condicional y la Marginal, estamos listos para unir estos conceptos en el teorema más poderoso de la probabilidad.\n",
+    "\n",
+    "El **Teorema de Bayes** es esencialmente una herramienta para **actualizar nuestras creencias** basadas en nueva evidencia.\n",
+    "\n",
+    "$$\\text{P(Hipótesis | Evidencia)} = \\frac{\\text{P(Evidencia | Hipótesis)} \\cdot \\text{P(Hipótesis)}}{\\text{P(Evidencia)}}$$\n",
+    "\n",
+    "En esta fórmula, el término $P(\\text{Evidencia})$ en el denominador es precisamente una **Probabilidad Marginal** (calculada con la Ley de la Probabilidad Total).\n"
+   ]
   }
  ],
  "metadata": {
