--- a/2.Estadistica/Bayes.ipynb
+++ b/2.Estadistica/Bayes.ipynb
@@ -5,7 +5,203 @@
    "id": "1198b05a",
    "metadata": {},
    "source": [
-    "# Teorema de Bayes\n"
+    "\n",
+    "# 🌟 El Teorema de Bayes\n",
+    "\n",
+    "El **Teorema de Bayes** es un principio fundamental en la probabilidad que nos permite **actualizar la probabilidad** de una hipótesis ($H$) a la luz de una nueva evidencia o información ($E$). Es decir, nos ayuda a pasar de una creencia inicial a una creencia posterior más informada.\n",
+    "\n",
+    "Es fundamental entender que el Teorema de Bayes no es solo una fórmula, sino una **metodología para actualizar el conocimiento** en cualquier campo. La clave en todos estos ejemplos es siempre **actualizar la creencia previa** con la nueva evidencia.\n",
+    "\n",
+    "## 📐 Definición y la Fórmula de Bayes\n",
+    "\n",
+    "La fórmula establece cómo la probabilidad de un evento $H$ (la hipótesis) cambia cuando se observa un evento $E$ (la evidencia).\n",
+    "\n",
+    "$$P(H|E) = \\frac{P(E|H) \\cdot P(H)}{P(E)}$$\n",
+    "\n",
+    "[Images of Bayesian inference]\n",
+    "\n",
+    "| Término | Nombre | Significado Conceptual |\n",
+    "| :--- | :--- | :--- |\n",
+    "| 🥇 $P(H|E)$ | **Probabilidad Posterior** | Lo que queremos saber: la probabilidad de la hipótesis *después* de ver la evidencia. |\n",
+    "| 🥈 $P(E|H)$ | **Verosimilitud (Likelihood)** | La probabilidad de ver la evidencia, *dada* que la hipótesis es verdadera. |\n",
+    "| 🥉 $P(H)$ | **Probabilidad Previa (Prior)** | Nuestra creencia inicial sobre la hipótesis *antes* de ver la evidencia. |\n",
+    "| 📊 $P(E)$ | **Evidencia/Probabilidad Marginal** | La probabilidad de la evidencia en general. Se calcula usando la Ley de Probabilidad Total. |\n",
+    "\n",
+    "## 💡 Ejemplos Cotidianos de su Uso\n",
+    "\n",
+    "El teorema de Bayes se utiliza constantemente en sistemas donde las predicciones deben adaptarse a nuevos datos.\n",
+    "\n",
+    "  * **1. 📧 Filtros de Spam (Tecnología):**\n",
+    "\n",
+    "      * Los filtros de correo usan Bayes para calcular $P(\\text{Spam} | \\text{Palabra X})$. El sistema aprende que si un correo contiene la palabra **$E$** (\"farmacia\"), la probabilidad de que sea spam **$H$** aumenta significativamente respecto a la probabilidad previa ($P(H)$) de cualquier correo aleatorio de la bandeja de entrada.\n",
+    "\n",
+    "  * **2. 🩺 Diagnóstico Médico (Salud):**\n",
+    "\n",
+    "      * Como vimos, se usa para calcular $P(\\text{Enfermo} | \\text{Positivo})$. El resultado depende tanto de la **precisión del test** ($P(E|H)$) como de la **prevalencia de la enfermedad** en la población ($P(H)$). Si una enfermedad es muy rara, es más probable que un positivo sea un falso positivo, incluso con un test muy bueno.\n",
+    "\n",
+    "  * **3. 💰 Finanzas y Mercados:**\n",
+    "\n",
+    "      * Los analistas usan modelos bayesianos para actualizar las probabilidades de un evento económico (ej. una recesión) a medida que se publican nuevos datos (ej. tasas de desempleo).\n",
+    "\n",
+    "## 💉 Ejemplo Práctico en Python: El Test Médico\n",
+    "\n",
+    "Retomemos el ejemplo médico para ver la fuerza de la **Probabilidad Previa ($P(H)$)**.\n",
+    "\n",
+    "**Escenario:**\n",
+    "\n",
+    "  * **Enfermedad Rara ($P(H)$):** 0.1% (0.001)\n",
+    "  * **Test Preciso ($P(E|H)$):** 99% (0.99)\n",
+    "  * **Falsa Alarma ($P(E|\\text{No } H)$):** 5% (0.05)\n",
+    "\n",
+    "**Objetivo:** Calcular $P(\\text{Enfermo} | \\text{Positivo})$.\n",
+    "\n",
+    "```python\n",
+    "# 1. Definición de las Probabilidades (Datos Iniciales)\n",
+    "P_H = 0.001       # P(Enfermo): Probabilidad Previa (Prior)\n",
+    "P_no_H = 1 - P_H  # P(No Enfermo) = 0.999\n",
+    "\n",
+    "P_E_dado_H = 0.99 # P(Positivo | Enfermo): Verosimilitud (Sensibilidad)\n",
+    "P_E_dado_no_H = 0.05 # P(Positivo | No Enfermo): Tasa de Falso Positivo\n",
+    "\n",
+    "# 2. Cálculo de la Probabilidad Marginal P(E) (Denominador - Ley de Probabilidad Total)\n",
+    "# P(E) = P(Positivo|Enfermo) * P(Enfermo) + P(Positivo|No Enfermo) * P(No Enfermo)\n",
+    "P_E = (P_E_dado_H * P_H) + (P_E_dado_no_H * P_no_H)\n",
+    "\n",
+    "# 3. Aplicación del Teorema de Bayes\n",
+    "# P(H|E) = [P(E|H) * P(H)] / P(E)\n",
+    "P_H_dado_E = (P_E_dado_H * P_H) / P_E\n",
+    "\n",
+    "print(f\"Probabilidad de la Evidencia P(E): {P_E:.4f}\")\n",
+    "print(f\"Probabilidad Posterior P(Enfermo | Positivo): {P_H_dado_E:.3f}\")\n",
+    "```\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "El resultado final, $P(\\text{Enfermo} | \\text{Positivo}) \\approx 0.019$ (o 1.9%), es muy bajo.\n",
+    "\n",
+    "¿Por qué la probabilidad de estar realmente enfermo es solo del **1.9%** a pesar de que el test tiene una precisión del 99%? ¿Qué factor de los datos iniciales es el más determinante en este sorprendente resultado? 🤔\n",
+    "\n",
+    "El resultado sorprendentemente bajo ($1.9\\%$) para $P(\\text{Enfermo} | \\text{Positivo})$ se debe a una de las probabilidades iniciales. \n",
+    "\n",
+    "Esa es una observación clave. La **Probabilidad Previa** $P(H)$ es, de lejos, el factor más determinante en este resultado. Aquí te muestro por qué, en términos de la fórmula de Bayes: 💡\n",
+    "\n",
+    "$$P(H|E) = \\frac{\\overbrace{P(E|H) \\cdot P(H)}^{\\text{Casos Verdaderos Positivos}}}{\\underbrace{P(E|H) \\cdot P(H) + P(E|\\text{No } H) \\cdot P(\\text{No } H)}_{\\text{Casos Positivos Totales (Evidencia, } P(E))}}$$\n",
+    "\n",
+    "### 📉 El Impacto de $P(H)$\n",
+    "\n",
+    "1.  **El Numerador (Casos Verdaderos Positivos):** La probabilidad de que un resultado positivo sea verdadero es directamente proporcional a $P(H)$. Dado que $P(H)$ es muy pequeña ($0.001$), el numerador es diminuto: $0.99 \\times 0.001 = 0.00099$.\n",
+    "\n",
+    "2.  **El Denominador (Casos Positivos Totales):** La evidencia total $P(E)$ está compuesta por dos vías para obtener un positivo:\n",
+    "    * **Verdaderos Positivos** ($0.00099$).\n",
+    "    * **Falsos Positivos** ($P(E|\\text{No } H) \\cdot P(\\text{No } H)$). Este término es $0.05 \\times 0.999 \\approx 0.04995$.\n",
+    "\n",
+    "El valor de la evidencia ($P(E) \\approx 0.05$) está **dominado por los falsos positivos** ($0.04995$) porque la población sana ($P(\\text{No } H)$) es 999 veces más grande que la población enferma.\n",
+    "\n",
+    "Al dividir el numerador muy pequeño ($0.00099$) entre un denominador mucho más grande que él ($0.05$), el resultado final ($P(H|E) \\approx 1.9\\%$) permanece bajo. **La rareza de la enfermedad ($P(H)$) supera la precisión del test ($P(E|H)$).**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dce36b8",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 🌎 Aplicaciones de Bayes en Diversas Industrias\n",
+    "\n",
+    "### ⛏️ 1. Geología y Exploración de Recursos\n",
+    "\n",
+    "En la búsqueda de petróleo, gas o depósitos minerales, las empresas enfrentan una gran incertidumbre.\n",
+    "\n",
+    "* **Hipótesis ($H$):** Existe un depósito comercialmente viable en una ubicación específica.\n",
+    "* **Evidencia ($E$):** Los datos sísmicos arrojaron un patrón positivo (indicando posible estructura).\n",
+    "\n",
+    "Antes de la perforación, la **Probabilidad Previa ($P(H)$)** puede ser muy baja (ej. 10%). Sin embargo, si los costosos y complejos datos sísmicos ($E$) son positivos, se usa Bayes para calcular la **Probabilidad Posterior ($P(H|E)$)**. Esta probabilidad actualizada es la que se utiliza para tomar la decisión de invertir millones en la perforación.\n",
+    "\n",
+    "### 🤖 2. Robótica y Navegación Autónoma\n",
+    "\n",
+    "Los robots, drones y vehículos autónomos usan técnicas bayesianas, como el **Filtro de Kalman**, para estimar su ubicación en tiempo real.\n",
+    "\n",
+    "* **Hipótesis ($H$):** La ubicación actual del robot en el mapa.\n",
+    "* **Evidencia ($E$):** Las nuevas lecturas de los sensores (ej. GPS, LiDAR).\n",
+    "\n",
+    "Cada nueva lectura de un sensor ($E$) se toma como evidencia que **actualiza** la creencia previa sobre la ubicación. Si el GPS da una ubicación, esta es la *evidencia*. El sistema usa Bayes para ponderar esa evidencia con su última estimación conocida (la *Prior*) y generar una nueva y más precisa estimación (la *Posterior*). Esto permite que la navegación sea fluida y precisa, a pesar del ruido o error en los sensores.\n",
+    "\n",
+    "\n",
+    "![](https://encrypted-tbn2.gstatic.com/licensed-image?q=tbn:ANd9GcSby6f7hmf4dsSDRE6kSnI9HvtDunMnM4lF0xgrcVXTaGvVR4rL63YNFuZ7x0ilm7wurhzAMIREZYZKG2ELe1m5MiNqGwZBWeaLUg_YRDom2CuukoY)\n",
+    "\n",
+    "\n",
+    "### ⚖️ 3. Ciencia Forense y Legal\n",
+    "\n",
+    "En los tribunales, Bayes ayuda a cuantificar el valor de la evidencia, especialmente la evidencia estadística como el ADN.\n",
+    "\n",
+    "* **Hipótesis ($H$):** El acusado es el responsable.\n",
+    "* **Evidencia ($E$):** Se encontró una coincidencia de ADN entre el acusado y la escena del crimen.\n",
+    "\n",
+    "La fórmula de Bayes ayuda a los expertos a determinar la probabilidad de que la coincidencia de ADN ocurra **dado que** el acusado es inocente ($P(E|\\text{No } H)$), contra la probabilidad de que la coincidencia ocurra **dado que** el acusado es culpable ($P(E|H)$). Esto permite a los jurados concentrarse en el verdadero valor probatorio de la evidencia.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b435d399",
+   "metadata": {},
+   "source": [
+    "El **Filtro de Kalman** es un tema fascinante y la aplicación más común del pensamiento bayesiano en ingeniería.\n",
+    "\n",
+    "## 🤖 Filtro de Kalman\n",
+    "\n",
+    "El Filtro de Kalman es un **algoritmo recursivo** que utiliza una serie de mediciones observadas a lo largo del tiempo (a menudo ruidosas o con errores) para producir una **estimación óptima** de un estado desconocido. Es esencialmente un \"promediador inteligente\" que da más peso a las estimaciones más precisas.\n",
+    "\n",
+    "Se utiliza masivamente en:\n",
+    "* **Navegación:** Para combinar lecturas de GPS, acelerómetros y giroscopios en vehículos autónomos o drones.\n",
+    "* **Economía:** Para estimar tendencias ocultas.\n",
+    "* **Robótica:** Para localizar robots en un mapa (localización simultánea y mapeo o SLAM).\n",
+    "\n",
+    "### 🔄 El Ciclo Bayesiano en Acción\n",
+    "\n",
+    "El poder del Filtro de Kalman radica en su naturaleza **recursiva**, que sigue el mismo patrón de la inferencia bayesiana que acabamos de estudiar:\n",
+    "\n",
+    "1.  **Fase de Predicción (Prior):** El filtro toma la estimación del estado actual (la **Probabilidad Posterior** del paso anterior) y la usa como **Probabilidad Previa** para predecir el estado futuro. Esta predicción se basa en las leyes de movimiento del sistema (física, en robótica).\n",
+    "2.  **Fase de Actualización (Posterior):** Cuando llega una nueva medición del sensor (la **Evidencia**), el filtro calcula el error entre su predicción y la medición real. Luego, utiliza esta información, junto con la fórmula de Bayes, para **actualizar** la estimación, creando la nueva **Probabilidad Posterior** (el mejor estimado de la realidad).\n",
+    "\n",
+    "\n",
+    "\n",
+    "De esta forma, el filtro no necesita recordar toda la historia de mediciones; solo necesita la estimación anterior para calcular la siguiente, lo que lo hace muy eficiente computacionalmente.\n",
+    "\n",
+    "Si volvemos a la fórmula de Bayes:\n",
+    "\n",
+    "$$P(H|E) = \\frac{P(E|H) \\cdot P(H)}{P(E)}$$\n",
+    "\n",
+    "¿Qué término de la fórmula de Bayes crees que corresponde a la estimación que produce la **Fase de Predicción** del Filtro de Kalman, antes de que llegue la nueva medición ($E$)? 🤔\n",
+    "\n",
+    "Esa es una excelente pregunta que conecta la **Teoría de Bayes** directamente con su aplicación práctica en ingeniería. Estás en lo correcto al enfocarte en la fase de **Predicción** del Filtro de Kalman. 🤖\n",
+    "\n",
+    "### 🔍 El Filtro de Kalman y la Inferencia Bayesiana\n",
+    "\n",
+    "Recordemos los dos componentes esenciales de la fórmula de Bayes:\n",
+    "\n",
+    "$$P(H|E) = \\frac{P(E|H) \\cdot P(H)}{P(E)}$$\n",
+    "\n",
+    "| Etapa de Inferencia | Término Bayesiano | Significado en el Filtro de Kalman |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Antes de la Evidencia** | $P(H)$ **(Probabilidad Previa o Prior)** | Es la creencia o estimación del estado actual *antes* de recibir la nueva lectura del sensor. |\n",
+    "| **Después de la Evidencia** | $P(H|E)$ **(Probabilidad Posterior o Posterior)** | Es la estimación *actualizada* y más precisa del estado, después de incorporar la nueva lectura del sensor. |\n",
+    "\n",
+    "El término de la fórmula de Bayes que representa la predicción que el filtro genera *antes* de que llegue la nueva evidencia ($E$) es la **Probabilidad Previa** $P(H)$.\n",
+    "\n",
+    "### 🧠 ¿Por qué $P(H)$ es la Predicción?\n",
+    "\n",
+    "* La **Predicción** se basa únicamente en la estimación anterior y en las leyes de movimiento del sistema. No ha visto la nueva medición del sensor.\n",
+    "* En la fórmula de Bayes, $P(H)$ es la probabilidad de la hipótesis **antes** de considerar la nueva evidencia $E$.\n",
+    "\n",
+    "Por lo tanto, el ciclo del Filtro de Kalman se puede mapear directamente a los componentes de la inferencia bayesiana:\n",
+    "\n",
+    "| 🔄 Ciclo del Filtro de Kalman | Término de Bayes | Nombre en Bayes |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Predicción** | $P(H)$ | **Probabilidad Previa** (Prior) |\n",
+    "| **Actualización** | $P(H|E)$ | **Probabilidad Posterior** (Posterior) |\n",
+    "\n"
    ]
   }
  ],
